@@ -6,6 +6,8 @@
 <noframes>
 <body>
 <div id="content">52-frameset.html</div>
+<p>Duh - no frame support?</p>
 </body>
+</noframes>
 </frameset>
 </html>
